Creating all the different apps for the website
Adding new apps (such as view, add, and drop inside of the classes app) and the pages corresponding to each app.

--- a/FSUClassSearch/classes/templates/classes/home.html
+++ b/FSUClassSearch/classes/templates/classes/home.html
@@ -4,7 +4,16 @@
     <h1>Home page</h1>
     <h2>You are logged in.</h2>
     <h2>"View" button here</h2>
+    <button>
+        <a href="/classes/view/">View my classes</a>
+    </button>
     <h2>"Add" button here</h2>
+    <button>
+        <a href="/classes/add/">Add a class</a>
+    </button>
     <h2>"Drop" button here</h2>
+    <button>
+        <a href="/classes/drop/">Drop a class</a>
+    </button>
     
 {% endblock %}
