Update DB tables and create Form
Updated tables Class and Student and added Enrolled_In table. Also, created a Form class which is displayed when students want to add a new class based on search criteria.

--- a/FSUClassSearch/classes/templates/classes/home.html
+++ b/FSUClassSearch/classes/templates/classes/home.html
@@ -1,7 +1,7 @@
 {% extends 'base_layout.html' %}
 
 {% block content %}
-    <h1>Home page</h1>
+    <h1>Home page - {{user}}</h1>
     <h2>You are logged in.</h2>
     <h2>"View" button here</h2>
     <button>
