--- a/FSUClassSearch/classes/add/templates/add/add_home.html
+++ b/FSUClassSearch/classes/add/templates/add/add_home.html
@@ -2,6 +2,12 @@
 
 {% block content %}
     <h1>Displays list of class search filters here:</h1>
+    <form class="site-form" action="{% url 'classes:add:home' %}" method="POST">
+        {% csrf_token %}
+        {{ form.as_p }}
+        <input type="submit" value="Submit">
+    </form>
+
     
     
 {% endblock %}
