Logout feature implemented
(Login feature was already implemented in the first commit to master). Logout feature is implemented.

--- a/FSUClassSearch/templates/base_layout.html
+++ b/FSUClassSearch/templates/base_layout.html
@@ -11,6 +11,14 @@
 
 <body>
     <h1>Florida State University</h1>
+    {% if user.is_authenticated %}
+    <nav>
+      <form action="{% url 'logout' %}" method="POST">
+        {% csrf_token %}
+        <button type="submit">Logout</button>
+      </form>
+    </nav>
+    {% endif %}
     <div class="wrapper">
       {% block content %}
       {% endblock %}
